--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "jose": "^6.1.1",
     "mongoose": "^8.19.3",
     "next": "16.0.1",
     "react": "19.2.0",
